# MarketSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  cash.csv  plotter.ipynb  priceHistory.csv  shares.csv  template.cpp  wealth.csv
.github/workflows/: documentation.yml
app/: CMakeLists.txt  main.cc
cmake/: Docs.cmake
docs/: Doxyfile
docs/latex/: _limit_order_book_8h_source.tex  _market_8h_source.tex  _market_player_8h_source.tex  annotated.tex  class_limit_order_book.tex  class_market.tex  class_market_player.tex  classcustom__priority__queue.eps  classcustom__priority__queue.tex  files.tex  hierarchy.tex  market_8h_source.tex  refman.tex  struct_news_generator.tex  struct_order.tex  struct_portfolio.tex  struct_ptr_greater.eps  struct_ptr_greater.tex  struct_ptr_less.eps  struct_ptr_less.tex
src/: CMakeLists.txt
src/ExecutionStrategy/: CMakeLists.txt  ExecutionStrategy.h
src/LimitOrderBook/: CMakeLists.txt  LimitOrderBook.cc  LimitOrderBook.h
src/Market/: CMakeLists.txt  Market.cc  Market.h
src/Market/LimitOrderBook/: CMakeLists.txt  LimitOrderBook.cc  LimitOrderBook.h  constants.cc
src/Market/MarketPlayer/: CMakeLists.txt  MarketPlayer.cc  MarketPlayer.h  constants.cc
src/MarketPlayer/: CMakeLists.txt  MarketPlayer.cc  MarketPlayer.h
src/my_lib/: my_lib.cc  my_lib.h
tests/: CMakeLists.txt
tests/LimitOrderBookTests/: CMakeLists.txt  LimitOrderBookTests.cc
tests/MarketPlayerTests/: CMakeLists.txt  MarketPlayerTests.cc
tests/MarketTests/: CMakeLists.txt  MarketTests.cc
